--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  --scroll-behavior: smooth !important;
+  scroll-behavior: smooth !important;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: #282c33;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* center the whole Page  */
+.centered-container {
+  max-width: 1600px;
+  margin: 0 auto;
+  /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+  /* height: 100vh; */
 }
