--- a/app/globals.css
+++ b/app/globals.css
@@ -16,10 +16,8 @@ body {
   max-width: 1600px;
   margin: 0 auto;
   /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-  /* height: 100vh; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; */
 }
-
-
